[package]
name = "syntax-error"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/syntax-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
yansi = "0.5"
unicode-width = "0.1.9"
concolor = { version = "0.1", optional = true }

[dev-dependencies]

[features]
default = ["auto-color"]
auto-color = ["concolor", "concolor/auto"]

[package.metadata.docs.rs]
all-features = true
